--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <script src="https://kit.fontawesome.com/2da65710ec.js" crossorigin="anonymous"></script>
 
 <!--- START nav  --->
@@ -127,3 +131,4 @@
   
 <!-- END FOOTER SECTION -->
   
+  </html>
