--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <script src="https://kit.fontawesome.com/2da65710ec.js" crossorigin="anonymous"></script>
 
