--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/2da65710ec.js" crossorigin="anonymous"></script>
 </head>
-<script src="https://kit.fontawesome.com/2da65710ec.js" crossorigin="anonymous"></script>
 
+<body>
 <!--- START nav  --->
 
 <nav id="navbar" class="nav">
@@ -130,5 +133,6 @@
 </footer>
   
 <!-- END FOOTER SECTION -->
-  
-  </html>
+
+</body>
+</html>
